k8s-yaml/chp.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: configurable-http-proxy
  name: configurable-http-proxy
  namespace: jupyter-exam1
spec:
  selector:
    matchLabels:
      app: configurable-http-proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: configurable-http-proxy
    spec:
      containers:
      - name: chp
        image: jupyterhub/configurable-http-proxy:5.3.0
        ports:
        - containerPort: 8000
        - containerPort: 8001
        volumeMounts:
        - name: chp-secret
          mountPath: /chp-secret
        command:
        - configurable-http-proxy
        - --ip=0.0.0.0
        - --port=8000
        - --api-ip=0.0.0.0
        - --api-port=8001
        - --default-target=http://jupyterhub-svc:8081
        - --error-target=http://jupyterhub-svc:8081/hub/error
      tolerations:
      - {key: node.kubernetes.io/disk-pressure, operator: Exists}
      - {key: node.kubernetes.io/out-of-disk, operator: Exists}
      - {key: node.kubernetes.io/memory-pressure, operator: Exists}
      volumes:
      - name: chp-secret
        secret:
          secretName: chp-secret
