k8s-yaml/jupyterhub-frame.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jupyterhub-svc
  namespace: jupyter-exam1
spec:
  selector:
    cs-aalto/app: jh-exam1
  ports:
  # - protocol: TCP
  #   port: 80
  #   targetPort: 8000
  #   name: jupyter-public
  - protocol: TCP
    port: 8081
    targetPort: 8081
    name: jupyter-api
  - protocol: TCP
    port: 36541
    targetPort: 36541
    name: jupyterhub-service-stats
