k8s-yaml/ingress-block-rstudio.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-blocked
  namespace: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-blocked
  template:
    metadata:
      labels:
        app: ingress-blocked
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
      volumes:
      - name: config
        configMap:
          name: ingress-blocked-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-blocked
  namespace: jupyter
spec:
  selector:
    app: ingress-blocked
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: block-rstudio-rpc
  namespace: jupyter
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - jupyter.cs.aalto.fi
    secretName: tls
  ingressClassName: nginx
  rules:
  - host: jupyter.cs.aalto.fi
    http:
      paths:
      - path: /user/[^/]+/rstudio(/|$)
        pathType: ImplementationSpecific
        backend:
          service:
            name: ingress-blocked
            port:
              number: 8080
